# net-test-pro

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-05-11-net-test-pro.md
docs/superpowers/specs/: 2026-05-11-net-test-pro-design.md
src/nettest/: __main__.py  cache.py  cli.py  diagnostic.py  env.py  rating.py  report.py  runner.py  targets.py  types.py
src/nettest/probes/: bandwidth.py  dns.py  http.py  latency.py  ping.py  traceroute.py
tests/: conftest.py  test_bandwidth_parser.py  test_cache.py  test_diagnostic.py  test_dns_parser.py  test_env.py  test_http_parser.py  test_latency.py  test_ping_parser.py  test_rating.py  test_report.py  test_runner.py  test_smoke.py  test_targets.py  test_traceroute_parser.py  test_types.py
tests/fixtures/: curl_ok.txt  dig_ok.txt  dig_timeout.txt  networkquality_macos26.txt  networkquality_missing_loaded.txt  networkquality_ok.txt  ping_full_loss.txt  ping_ok.txt  ping_partial_loss.txt  traceroute_ok.txt  traceroute_unreached.txt  traceroute_with_loss.txt
