[project]
name = "net-test-pro"
version = "0.1.0"
description = "macOS WiFi network health check CLI"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.7",
]

[project.scripts]
nettest = "nettest.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nettest"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
